= Changelog

=== 1.7.1-dev / unreleased

=== 1.7.0 / 2025-02-20

----
* Upgrade to rails 7.2
* Servers can be disabled and don't show in dashboard and server overview
* fix channel diagrams: don't show subchannels if destination is disabled
----

=== 1.6.1 / 2024-12-14

----
* global search for servers, channels and channel statistics
* security updates
----


=== 1.6.0 / 2024-10-27

----
* add ldap authentication as devise strategy
* bugfix: avoid duplicate connections in some diagrams
* improve dashboard
* heavy refactoring internal code
----

=== 1.5.0 / 2024-07-16

----
* Switching deployment from capistrano to podman containers
* bump gem and npm dependencies
* update and improve datatables controller
----

=== 1.4.0 / 2023-11-25

----
* upgrade to rails 7.1
----

=== 1.3.7 / 2023-10-03

----
* add X-Requested-With for API Calls (used by Mirth >= 4.0)
* migrate host ping flash to bootstrap toast
----

=== 1.3.6 / 2023-09-10

----
* refine tables for alerts and notes
* set and show acknowledges within Queued Messages (home page)
----

=== 1.3.5 / 2023-06-25

----
* Channel counter graphs now works with timescaledb in apache license too
----

=== 1.3.4 / 2023-04-23

----
* bugfix: GoodJob cron jobs
* adoc: syntax highlighting for transformers/filters
----

=== 1.3.3 / 2023-04-16

----
* fix polymorphic selector (used in authorizations) with tom-select
----

=== 1.3.2 / 2023-04-16

----
* show active escalation levels for channel statistics
* schedule configuration backups und timescale purges as background job
----

=== 1.3.0 / 2023-04-01

----
* full rewrite on escalations
* ChannelStatisticGroup: collect more channel statistics in one place 
  and add escalation levels to group
----

=== 1.2.1 / 2023-03-05

----
* Server: asciidoc server page
* Server: refactor ServerZip
----

=== 1.2.0 / 2023-03-04

----
* Channel statistics: add filter recent errors
* Server: show connector urls (new tab)
* add preprocessing/postprocessing Scripts to channels#show